[TRACEUI-32] Update Tool to Java 11
Signed-off-by: Nils Christian Ehmke <nils@rhocas.de>